<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2015 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_notification"
            android:icon="@drawable/ic_notify"
            android:tint="@color/button_grey"
            android:title="@string/notify" />
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/ic_home"
            android:tint="@color/button_grey"
            android:title="@string/home" />
        <item
            android:id="@+id/menu_search"
            android:icon="@drawable/ic_search"
            android:tint="@color/button_grey"
            android:title="@string/search" />
        <item
            android:id="@+id/menu_searchSysttem"
            android:icon="@drawable/ic_cld"
            android:tint="@color/button_grey"
            android:title="@string/search_system" />
        <item
            android:id="@+id/menu_manage"
            android:icon="@drawable/ic_manager"
            android:tint="@color/button_grey"
            android:title="@string/manage" />

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:tint="@color/button_grey"
            android:title="@string/settings" />
        <item
            android:id="@+id/menu_logout"
            android:icon="@drawable/ic_logout"
            android:tint="@color/button_grey"
            android:title="@string/logout" />
    </group>
</menu>
