<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:orientation="vertical"
              android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/chat_navigator"
        android:layout_width="match_parent"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp"
        android:layout_height="50dp"
        android:background="@color/colorlightGreen"
        android:paddingTop="5dp">


        <TextView
            android:id="@+id/tv_friend_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/setting"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/acc_settings"
        android:textSize="16dp"
        android:textColor="@color/colorlightGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/changePassword"
        android:textSize="16dp"
        android:textColor="@color/com_facebook_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_changePassword"/>
    <TextView
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_settings"
        android:textSize="16dp"
        android:textColor="@color/colorlightGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_marginLeft="30dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/app_notificaiton"
        android:textSize="16dp"
        android:layout_centerVertical="true"
        android:textColor="@color/com_facebook_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"/>
    <Switch
        android:id="@+id/mSwitch"
        android:layout_marginRight="20dp"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    </RelativeLayout>
</LinearLayout>
