<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_marginTop="100dp"
        >

        <com.fimo_pitch.custom.view.RoundedImageView
           android:background="@mipmap/ic_launcher"
           android:layout_width="80dp"
           android:layout_height="80dp"
           android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_20sp"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:padding="12dp"
            android:text="@string/app_name"/>

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/color_myaccount_title_bg"
                      android:inputType="textEmailAddress"
                      android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <EditText android:id="@+id/input_password"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:textColor="@color/color_myaccount_title_bg"
                      android:shadowColor="@color/color_myaccount_title_bg"
                      android:hint="Password"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/btn_login"
            android:background="@drawable/item_nav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/color_myaccount_title_bg"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size_20sp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:text="@string/login"/>

        <TextView android:id="@+id/link_forgot"
                  android:layout_width="fill_parent"
                  android:layout_height="30dp"
                  android:layout_marginBottom="4dp"
                  android:textColor="@color/color_myaccount_title_bg"
                  android:text="@string/forgot"
                  android:gravity="center"
                  android:textSize="16dip"/>

        <TextView android:id="@+id/link_signup"
                  android:layout_width="250dp"
                  android:layout_height="30dp"
                  android:textColor="@color/colorPrimary"
                  android:text="@string/link_signUp"
                  android:layout_gravity="center"
                  android:textSize="16dip"/>
        <TextView android:id="@+id/link_trial"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/trial"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:textSize="16dip"/>
        <com.facebook.login.widget.LoginButton
            android:id="@+id/loginFB"
            android:layout_marginTop="20dp"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            />
        <com.google.android.gms.common.SignInButton
            android:id="@+id/loginGG"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>
</LinearLayout>