<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/s25dp"
        android:layout_marginTop="@dimen/s30dp"
        android:paddingRight="@dimen/s25dp">

        <com.fimo_pitch.custom.view.RoundedImageView
            android:id="@+id/img_avatar"
            android:layout_width="@dimen/s60dp"
            android:layout_height="@dimen/s60dp"
            android:src="@mipmap/ic_launcher"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/s25dp"
            >
        </com.fimo_pitch.custom.view.RoundedImageView>
        <TextView
            android:id="@+id/txt_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_gravity="center_horizontal"
            android:visibility="invisible"
            />
        <!--  Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <EditText android:id="@+id/input_name"
                      android:layout_width="match_parent"
                      android:textColor="@color/colorPrimary"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/colorPrimary"
                      android:inputType="textCapWords"
                      android:hint="Tên người dùng" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <EditText android:id="@+id/input_phone"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColor="@color/colorPrimary"
                      android:textColorHint="@color/colorPrimary"
                      android:inputType="number"
                      android:maxLength="11"
                      android:hint="Số điện thoại liên lạc" />
        </android.support.design.widget.TextInputLayout>
        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <EditText android:id="@+id/signup_input_email"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/colorPrimary"
                      android:textColor="@color/colorPrimary"
                      android:inputType="textEmailAddress"
                      android:hint="Email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           >
            <EditText android:id="@+id/signup_input_password"
                      android:layout_width="match_parent"
                      android:textColorHint="@color/colorPrimary"
                      android:textColor="@color/colorPrimary"
                      android:layout_height="wrap_content"
                      android:inputType="textPassword"
                      android:hint="Mật khẩu"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText android:id="@+id/input_re_password"
                      android:layout_width="match_parent"
                      android:textColor="@color/colorPrimary"
                      android:layout_height="wrap_content"
                      android:textColorHint="@color/colorPrimary"
                      android:inputType="textPassword"
                      android:hint="Nhập lại mật khẩu"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <RadioGroup
            android:id="@+id/radio_userType"
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_owner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginRight="@dimen/s20dp"
                android:text="@string/chusan"
                android:layout_gravity="right"
                />
            <RadioButton
                android:id="@+id/radio_team"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:layout_marginLeft="@dimen/s20dp"
                android:text="@string/khachang"
                android:checked="true"
                android:layout_gravity="left"/>
        </RadioGroup>
        </LinearLayout>

        <!-- Signup Button -->

        <TextView
            android:id="@+id/btn_signUp"
            android:layout_width="@dimen/s200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/s10dp"
            android:layout_marginBottom="@dimen/s10dp"
            android:gravity="center_horizontal"
            android:background="@drawable/item_nav"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/s20dp"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/s10dp"
            android:text="@string/signup"/>

        <TextView android:id="@+id/link_login"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:textColor="@color/colorPrimary"
                  android:layout_marginBottom="@dimen/s25dp"
                  android:text="@string/link_login"
                  android:gravity="center"
                  android:textSize="@dimen/s20dp"/>

    </LinearLayout>
</ScrollView>